aaa: cleanups & minor refactoring
This patch provides various cleanups in area of AAA and SSO
These include things suggested by IDE static code analysis ie. :
- removing unnecessary throws,
- removing unused methods
- minor style related refactorings

Change-Id: I49677835410e2623560c4cb9490a0c6592741ef2
Signed-off-by: Artur Socha <asocha@redhat.com>